# enayfay

./: CMakeLists.txt
bota/: CMakeLists.txt  main.cpp
bota/src/: main.cc
krakenapi/: CMakeLists.txt  kclient.cpp  krakenapi.hpp  ktrade.cpp  ktrade.hpp
lib/: CMakeLists.txt
lib/include/: enayfay.hpp  environment.hpp  environmentdataprovider.hpp  krakendataprovider.hpp
lib/src/: enayfay.cpp  krakendataprovider.cpp
tsmodel/: CMakeLists.txt
tsmodel/include/: ANNModel.h  ArrayStream.h  DataPoint.h  FileStream.h  ForecastModel.h  ForecastModeld.h  KrakenStream.h  TimeReference.h  TimeSerieStream.h
tsmodel/src/: DataPoint.cpp  KrakenStream.cpp
